--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -15,10 +15,3 @@
     background-color: gray;
     
 }
-
-/* .menuItem
-{
-    border-color: red;
-    border-width: 1px;
-    background-color: #BBFF00;
-} */
